# theory_of_information

./: .gitignore  CMakeLists.txt  README.md  main.py
other/: laptop.tiff
src/: main.cpp
src/python/: main.py
